--- a/css/main.css
+++ b/css/main.css
@@ -330,3 +330,50 @@ section hr {
 .subButton:active {
 	padding: 11px 21px;
 }
+
+.label {
+	margin-bottom: 8px;
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+	margin-bottom: 8px;
+	width: 100%;
+	padding: 7px;
+	border: 1px solid #ccc;
+	border-radius: 6px;
+}
+
+input[type="checkbox"] {
+	margin-bottom: 10px;
+	margin-left: 5px;
+}
+
+button {
+	background-color: orange;
+	padding: 8px 14px;
+	border: 1px solid rgba(0, 0, 0, 0.219);
+	border-radius: 6px;
+	transition: all 0.2s;
+}
+
+button:hover {
+	background-color: rgb(158, 97, 23);
+	color: rgb(255, 255, 255);
+}
+
+.teaxtarea {
+	display: flex;
+	align-items: center;
+}
+
+footer {
+	width: 100%;
+	height: 60px;
+	background-color: rgb(44, 43, 43);
+	text-align: center;
+	color: white;
+	line-height: 60px
+}
