--- a/css/main.css
+++ b/css/main.css
@@ -370,10 +370,40 @@ button:hover {
 }
 
 footer {
-	width: 100%;
-	height: 60px;
 	background-color: rgb(44, 43, 43);
-	text-align: center;
 	color: white;
-	line-height: 60px
+	padding: 40px 0 20px 0;
+}
+
+footer p {
+	text-align: center;
+	margin-top: 20px;
+}
+
+.footerNav,
+.socialNav {
+	list-style: none;
+	display: flex;
+}
+
+.footerNav li,
+.socialNav li {
+	margin-left: 20px;
+
+}
+
+.footerNav li a,
+.socialNav li a {
+	color: #fff;
+	text-decoration: none;
+	transition: all 0.3;
+}
+
+.footerNav li a:hover,
+.socialNav li a:hover {
+	color: orange;
+}
+
+.socialNav {
+	float: right;
 }
